# tensor-lib

./: Cargo.toml  README.md  index.html
.github/workflows/: doc.yml
doc/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
doc/cblas/: all.html  enum.Diagonal.html  enum.Layout.html  enum.Part.html  enum.Side.html  enum.Transpose.html  fn.caxpy.html  fn.ccopy.html  fn.cdotc_sub.html  fn.cdotu_sub.html  fn.cgbmv.html  fn.cgemm.html  fn.cgemv.html  fn.cgerc.html  fn.cgeru.html  fn.chbmv.html  fn.chemm.html  fn.chemv.html  fn.cher.html  fn.cher2.html  fn.cher2k.html  fn.cherk.html  fn.chpmv.html  fn.chpr.html  fn.chpr2.html  fn.cscal.html  fn.csscal.html  fn.cswap.html  fn.csymm.html  fn.csyr2k.html  fn.csyrk.html  fn.ctbmv.html  fn.ctbsv.html  fn.ctpmv.html  fn.ctpsv.html  fn.ctrmm.html  fn.ctrmv.html  fn.ctrsm.html  fn.ctrsv.html  fn.dasum.html  (+114 more)
doc/cblas_sys/: all.html  enum.CBLAS_DIAG.html  enum.CBLAS_LAYOUT.html  enum.CBLAS_SIDE.html  enum.CBLAS_TRANSPOSE.html  enum.CBLAS_UPLO.html  fn.cblas_caxpy.html  fn.cblas_ccopy.html  fn.cblas_cdotc_sub.html  fn.cblas_cdotu_sub.html  fn.cblas_cgbmv.html  fn.cblas_cgemm.html  fn.cblas_cgemv.html  fn.cblas_cgerc.html  fn.cblas_cgeru.html  fn.cblas_chbmv.html  fn.cblas_chemm.html  fn.cblas_chemv.html  fn.cblas_cher.html  fn.cblas_cher2.html  fn.cblas_cher2k.html  fn.cblas_cherk.html  fn.cblas_chpmv.html  fn.cblas_chpr.html  fn.cblas_chpr2.html  fn.cblas_cscal.html  (+131 more)
src/: lib.rs
tensor-lib/: Cargo.toml
tensor-lib-macros/: Cargo.toml
tensor-lib/src/: blas.rs  lib.rs  matmul.rs
(+6049 files in other folders)
